--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	},
 
 	"require": {
-		"php": "^5.4.0 || 7.0.*",
+		"php": "^5.6 || ~7.0.0 || ~7.1.0 || ~7.2.0 || ~7.3.0 || ~7.4.0",
 		"ext-mbstring": "*",
 		"setasign/fpdi": "1.6.*"
 	},
